# recipebox-1

./: pyproject.toml
courier/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20200501_1912.py  0002_favouriterecipes.py
recipes/static/: recipe.css
recipes/templates/: AddAuthorForm.html  AddRecipeForm.html  SignupForm.html  author_detail.html  base.html  favourite-recipe.html  index.html  recipe_detail.html  update_recipe.html
