[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = ""
authors = ["avelyno koumaka <kou2295@calu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
